# cp4dm-ortools-wrapper

./: LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: fim_cpmpy_global.py
src/cp4dm_cpmpy_oscar_ml/: __init__.py  api.py  exceptions.py  typing.py
src/cp4dm_cpmpy_oscar_ml/classification_tree/: __init__.py
src/cp4dm_cpmpy_oscar_ml/core/: __init__.py  data.py  result.py
src/cp4dm_cpmpy_oscar_ml/cpmpy_integration/: __init__.py  globals.py  solver.py
src/cp4dm_cpmpy_oscar_ml/engine/: __init__.py  domain.py  propagation_queue.py  propagator.py  search.py  trail.py
src/cp4dm_cpmpy_oscar_ml/pattern_mining/: __init__.py  formats.py
src/cp4dm_cpmpy_oscar_ml/pattern_mining/fem/: propagators.py
src/cp4dm_cpmpy_oscar_ml/pattern_mining/fim/: __init__.py  propagators.py
src/cp4dm_cpmpy_oscar_ml/pattern_mining/spm/: propagators.py
src/cp4dm_cpmpy_oscar_ml/pattern_mining/tree/: propagators.py
src/cp4dm_cpmpy_oscar_ml/utils/: __init__.py  bitset.py
tests/fixtures/fem/: small_fem.txt
tests/fixtures/fim/: test.txt
tests/fixtures/spm/: small_spm.txt
tests/unit/: test_bitset.py  test_cover_size_parity.py  test_data_formats.py  test_engine.py  test_fem_and_api.py  test_fim_parity.py  test_spm_parity.py  test_tree_propagators.py
